<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/shareMenu" />
        <item
            android:id="@+id/nav_moreapps"
            android:icon="@drawable/ic_more_apps"
            android:title="@string/moreappMenu" />
        <item
            android:id="@+id/nav_rateus"
            android:icon="@drawable/ic_rate_us"
            android:title="@string/rateusMenu" />

        <item
            android:id="@+id/nav_features"
            android:icon="@drawable/ic_features"
            android:title="@string/features" />
        <item
            android:id="@+id/nav_supports"
            android:icon="@drawable/ic_support"
            android:title="@string/support" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/ourproducts"
            android:icon="@drawable/ic_product"
            android:title="@string/our_products"/>
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_about"
            android:title="@string/about"/>
        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/contact"/>
        <item
            android:id="@+id/privacyPolicy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy_policy"/>

    </group>
</menu>